# cookie-odyssey

./: .djlintrc  .env.template  .gitignore  .pre-commit-config.yaml  .tool-versions  COMPLAINTS.md  Cargo.toml  Justfile  Makefile  README.md  REFERENCES.md  bun.lockb  cookie-odyssey.code-workspace  docker-compose.yml  eslint.config.js  mix.exs  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  transcode.yml
adr/: 00-README.md  01-htmx.md  02-language.md  03-web-stack.md  04-orm.md  05-css.md  06-directory-structure.md  07-file-storage.md  08-js.md
app_config/: Cargo.toml  README.md
app_config/src/: lib.rs
assets/: app.css  package-lock.json  package.json  tailwind.config.js
assets/css/: app.css
assets/js/: app.ts  coming-soon.ts  confetti.ts  datetime.ts  htmx-error-handling.ts  htmx-types.ts  js_utils.ts  stimulus-utils.ts  theme.ts  toast.ts
assets/js/comment/: add-comment.ts  edit-comment.ts
assets/js/media/: form-controller.ts  gallery-controller.ts  thumbnail-demo-controller.ts  thumbnail.ts
assets/js/utils/: promise-timeout.ts  stimulus-typed.ts
config/: .env.template  Cargo.toml  README.md  config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
config/src/: lib.rs
deploy/: README.md  ctl.ts  deploy-remote.sh  deploy.sh
deploy/nginx/: cookie-odyssey
deploy/systemd/: cookie-odyssey-app.service
entities/: Cargo.toml
entities/src/: file.rs  journal.rs  journal_comment.rs  journal_entry.rs  journal_entry_media.rs  lib.rs  prelude.rs  user.rs  video_transcode_task.rs
lib/: cookie_odyssey.ex  cookie_odyssey_web.ex
lib/cookie_odyssey/: application.ex  repo.ex
lib/cookie_odyssey_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/cookie_odyssey_web/channels/: user_socket.ex
lib/cookie_odyssey_web/controllers/: page_controller.ex
lib/cookie_odyssey_web/templates/layout/: app.html.eex  nav_item.html.eex
lib/cookie_odyssey_web/templates/page/: index.html.eex
lib/cookie_odyssey_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
migration/: Cargo.toml
migration/data-migrations/journal-entry-media-width-height-thumbnail/: README.md  bun.lockb  index.ts  package.json
migration/src/: lib.rs  m20220101_000001_create_journal_table.rs  m20240508_221939_create_table_file.rs  m20240508_223223_create_table_journal.rs  m20240512_173332_create_table_user.rs  m20240518_025335_create_table_journal_entry.rs  m20240518_135530_create_table_journal_entry_media.rs  m20240526_203520_create_table_journal_comment.rs  m20250520_001650_media_type.rs  m20250622_181713_journal_entry_media_width_height_thumbnail.rs  m20251007_205825_create_table_video_transcode_task.rs  main.rs
notes/: complaints.md  references.md  showcase.md
priv/repo/: seeds.exs
src/: assets.rs  config.rs  lib.rs  main.rs  route_utils.rs  router.rs  routes.rs  server.rs  state.rs  template_engine.rs
src/auth/: github_action_auth.rs  mod.rs  perms.rs  routes.rs  sessions.rs
src/auth/routes/: forgot_password.rs  login.rs  logout.rs  mod.rs  register.rs  user_list.rs
src/comment/: queries.rs
src/comment/routes/: comment_list.rs  mod.rs
src/demo/: routes.rs
src/journal/: mod.rs  queries.rs  routes.rs
src/journal/routes/: journal_day.rs  journal_detail.rs  journal_entry_edit.rs  journal_entry_new.rs  journal_list.rs  journal_new.rs  mod.rs
src/storage/: cleanup.rs  mod.rs  routes.rs  store.rs
src/storage/routes/: media_upload_proxy.rs  media_upload_url_get.rs  mod.rs
src/utils/: date_utils.rs  form_error.rs  mod.rs  not_found.rs  route_error.rs  route_utils.rs  serde_utils.rs  toast.rs
src/video_transcoding/: daemon.rs  manager.rs  mod.rs  routes.rs  transcode.rs
src/video_transcoding/backend/: github_action.rs  in_process.rs  mod.rs  traits.rs
templates/: base.html  journal_day.html  journal_detail.html  journal_entry_edit.html  journal_entry_new.html  journal_list.html  journal_new.html  login.html  oops.html  register.html  user_list.html
templates/auth/: login_form_pre.html  register_form.html
templates/comment/: comment_list.html
templates/common/: confetti.html  datetime.html  error_handling.html  form.html  form_error.html  head.html  js_utils.d.ts  js_utils.html  macros.html  media.d.ts  media.html  media_tag.html  navbar.html  script_utils.html  styles.html  theme.d.ts  theme.html  toast.d.ts  toast.html
templates/demo/: thumbnail-demo.html
test/: test_helper.exs
test/cookie_odyssey_web/controllers/: page_controller_test.exs
test/cookie_odyssey_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
tools/: build-js.ts  bundle-js.ts  dev.ts
