[package]
name = "cookie-odyssey"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
app-config = { path = "app_config" }
axum = "0.7.5"
axum-login = "0.15.1"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
entities = { path = "entities" }
itertools = "0.13.0"
migration = { path = "migration" }
minijinja = { version = "2.0.1", features = ["loader"] }
nanoid = "0.4.0"
once_cell = "1.19.0"
password-auth = "1.0.0"
sea-orm = { workspace = true, features = ["debug-print"] }
serde = { workspace = true }
serde_json = "1.0.117"
serde_qs = "0.13.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
thiserror = { workspace = true }
time = "0.3.36"
tokio = { workspace = true }
tower-http = { version = "0.5.2", features = ["fs", "catch-panic"] }
tower-sessions = { version = "0.12.2", default-features = false }
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[workspace]
members = ["app_config", "entities", "migration"]

[workspace.dependencies]
anyhow = "1.0.83"
chrono = { version = "0.4.38", features = ["std", "clock"] }
clap = { version = "4.5.4", features = ["derive"] }
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid"] }
serde = { version = "1.0.200", features = ["derive"] }
thiserror = { version = "1.0.60" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
url = { version = "2.5.0", features = ["serde"] }
