[package]
name = "cookie-odyssey"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
app-config = { path = "app_config" }
axum = "0.8.4"
axum-login = "0.17.0"
azure_core = { version="0.21.0", features = ["tokio-fs"] }
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
entities = { path = "entities" }
futures = "0.3.30"
itertools = "0.13.0"
migration = { path = "migration" }
minijinja = { version = "2.0.1", features = ["loader"] }
nanoid = "0.4.0"
once_cell = "1.19.0"
password-auth = "1.0.0"
sea-orm = { workspace = true, features = ["debug-print"] }
serde = { workspace = true }
serde_json = "1.0.117"
serde_qs = "0.13.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
thiserror = { workspace = true }
time = "0.3.36"
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["fs", "catch-panic"] }
tower-sessions = { version = "0.14.0", default-features = false }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
dialoguer = { version = "0.11.0", features = [] }

[workspace]
members = ["app_config", "entities", "migration"]

[workspace.dependencies]
anyhow = "1.0.83"
async-trait = "0.1.88"
chrono = { version = "0.4.38", features = ["std", "clock"] }
clap = { version = "4.5.4", features = ["derive"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid"] }
serde = { version = "1.0.200", features = ["derive"] }
thiserror = { version = "1.0.60" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
url = { version = "2.5.0", features = ["serde"] }
