[package]
name = "app-config"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
config = { version = "0.14.0", features = [] }
dotenv = { version = "0.15.0" }
serde = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror ={ workspace = true }
tracing = { workspace = true }