[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
app-config = { path = "../app_config" }
dotenv = "0.15.0"
sea-orm-migration = { version =  "1.1", features = [ "sqlx-sqlite", "runtime-tokio-native-tls" ] }
tokio = { version = "1.37.0", features = ["full"] }
